--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,37 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
-  }
-  
-  h1 {
-    text-align: center;
-  }
-  
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-  }
-  
-  th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  input {
-    padding: 8px;
-    margin-bottom: 10px;
-  }
-  
+  font-family: Arial, sans-serif;
+  margin: 20px;
+}
+
+h1,
+h4 {
+  text-align: left;
+  margin-left: 10%;
+}
+
+table {
+  width: 80%;
+  margin-left: 10%;
+  margin-right: auto;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+input {
+  width: 78.5%;
+  padding: 8px;
+  margin-bottom: 10px;
+  margin-left: 10%;
+}
+
+.heading {
+  background-color: rgb(47, 47, 47);
+  color: rgb(255, 255, 255);
+}
