--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,13 @@
 body {
   font-family: Arial, sans-serif;
   margin: 20px;
+  background-color: plum;
 }
 
 h1,
 h4 {
-  text-align: left;
-  margin-left: 10%;
+  text-align: center;
+  color: rgb(0, 0, 0);
 }
 
 table {
@@ -14,7 +15,8 @@ table {
   margin-left: 10%;
   margin-right: auto;
   border-collapse: collapse;
-  margin-top: 10px;
+  margin-top: -30px;
+  box-shadow: 0px 7px 20px 1px black;
 }
 
 th,
@@ -24,14 +26,32 @@ td {
   text-align: left;
 }
 
-input {
-  width: 78.5%;
-  padding: 8px;
-  margin-bottom: 10px;
-  margin-left: 10%;
+.serchbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0 19%;
 }
+
+/* .serchbar>:nth-child(1)>input {
+  align-items: center;
+  width: 15.5%;
+  padding: 9px;
+  margin-bottom: -10px;
+  margin-left: 18.7%;
+  border: 1px solid #ddd;
+  background-color: rgb(47, 47, 47);
+  color: rgb(255, 255, 255);
+} */
+
+
 
 .heading {
   background-color: rgb(47, 47, 47);
   color: rgb(255, 255, 255);
+}
+
+.one {
+  margin: 48px 162px;
 }
